--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -16,7 +16,7 @@
 
     <div class="sidebar">
       <div>
-        <button id="toggle-node" type="button">START/STOP</button>
+        <button id="toggle-node" type="button" onclick="toggleNode()">START/STOP</button>
       </div>
       <div class="ph">
         <a href="/">REGISTRATION</a>
