add transactions and fixed crashing

--- a/android_nfc_read_write/app/src/main/res/layout/activity_main.xml
+++ b/android_nfc_read_write/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         android:id="@+id/btnSendTransaction"
         android:layout_width="match_parent"
         android:layout_height="86dp"
-        android:text="Send Transactions" />
+        android:text="Pay" />
 
     <Button
         android:id="@+id/btnAddFunds"
