--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,48 +1,75 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Registration</title>
-  <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
-  <script src="../static/js/register.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registration</title>
+    <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
+    <script src="../static/js/register.js"></script>
 </head>
+
 <body>
-
-  <section id="container">
-
-    <div class="sidebar">
-      <div>
-        <button id="finalize" type="button" onclick="finalize()">CLOSE REGISTRATION</button>
-      </div>
-      <div class="ph">
-        <a href="#">REGISTRATION</a>
-        <a href="/transactions">TRANSACTIONS</a>
-      </div>
+    <div id="container">
+        <div id="sidebar">
+            <div class="header"></div>
+            <a class="active" href="#">
+                <div class="link">REGISTRATION</div>
+            </a>
+            <a href="/transactions">
+                <div class="link">TRANSACTIONS</div>
+            </a>
+            <a href="#">
+                <div class="link">REPORT GENERATION</div>
+            </a>
+        </div>
+        <div id="main">
+            <div class="header">
+                <div class="right-align">
+                    <button id="finalize" type="button" onclick="finalize()">FINISH</button>
+                </div>
+            </div>
+            <div class="content-flex">
+                <div class="box-50">
+                    <form id="client-form">
+                        <div class="client-header">CLIENT</div>
+                        <div class="label-input">
+                            Name
+                            <input placeholder="Client name" id="client-name" type="text" class="text-input"
+                                name="client-name" />
+                        </div>
+                        <div class="label-input">
+                            Contact
+                            <input placeholder="Contact number" id="client-contact" type="text" class="text-input"
+                                name="client-contact" />
+                        </div>
+                        <div class="label-input">
+                            Amount
+                            <input placeholder="Amount" id="client-amount" type="text" class="text-input"
+                                name="client-amount" />
+                        </div>
+                        <button id="client-add" type="button" onclick="registerClient()">add</button>
+                    </form>
+                </div>
+                <div class="box-50">
+                    <form id="vendor-form">
+                        <div class="vendor-header">VENDOR</div>
+                        <div class="label-input">
+                            Name
+                            <input placeholder="Business name" id="vendor-name" type="text" class="text-input"
+                                name="vendor-name" />
+                        </div>
+                        <div class="label-input">
+                            Contact
+                            <input placeholder="Contact number" id="vendor-contact" type="text" class="text-input"
+                                name="vendor-contact" />
+                        </div>
+                        <button id="vendor-add" type="button" onclick="registerVendor()">add</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="main">
-
-      <form id="client-form">
-        CLIENT REGISTRATION<br/><br/>
-        <input placeholder="Client name" id="client-name" type="text" class="text-input" name="client-name" /><br />
-        <input placeholder="Contact number" id="client-contact" type="text" class="text-input" name="client-contact" /><br />
-        <input placeholder="Amount" id="client-amount" type="text" class="text-input" name="client-amount" /><br />
-        <button id="client-add" type="button" onclick="registerClient()">add</button>
-      </form>
-
-      <hr/><br/><br/>
-
-      <form id="vendor-form">
-        VENDOR REGISTRATION<br/><br/>
-        <input placeholder="Business name" id="vendor-name" type="text" class="text-input" name="vendor-name" /><br />
-        <input placeholder="Contact number" id="vendor-contact" type="text" class="text-input" name="vendor-contact" /><br />
-        <button id="vendor-add" type="button" onclick="registerVendor()">add</button>
-      </form>
-
-    </div>
-
-  </section>
-
 </body>
+
 </html>
