--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -26,7 +26,7 @@
         </div>
         <div id="main">
             <div class="header">
-                <div class="right-align">
+                <div class="left-align">
                     <button id="toggle-node" type="button" onclick="toggleNode()">START/STOP</button>
                 </div>
             </div>
