improve interface design

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@
 
 #sidebar {
     background-image: linear-gradient(to bottom right, #a542b9, #a860c7, #bf6cd7);
-    width: 20vw;
+    width: 14vw;
     position: fixed;
     height: 100vh;
 }
@@ -30,7 +30,8 @@
 }
 
 #sidebar a .link {
-    padding-left: 25%;
+    text-align: left;
+    padding-left: 1.5vw;
 }
 
 #sidebar a.active {
@@ -44,7 +45,7 @@
 
 #main {
     background: #eaeaea;
-    margin-left: 20vw;
+    margin-left: 14vw;
     min-height: 100vh;
 }
 
@@ -62,16 +63,20 @@
     border-bottom: 1px solid #ddd;
 }
 
-.header button {
-    color: #555;
+button {
     border: none;
-    background: transparent;
-    transition: 0.2s ease-in-out color;
+    border-radius: 8px;
+    margin: 1vh 0;
+    padding: 8px;
+    background: rgba(198, 140, 219, 0.1);
+    color: #555;
+    transition: 0.2s ease-in-out background-color, 0.2s ease-in-out color;
 }
 
 button:hover {
     cursor: pointer;
     color: #a542b9;
+    background: rgba(198, 198, 219, 0.4);
 }
 
 .header .left-align {
@@ -82,7 +87,7 @@ button:hover {
 }
 
 .content, .content-flex {
-    min-height: 80vh;
+    /* min-height: 50vh; */
     padding: 12px;
 }
 
@@ -90,15 +95,23 @@ button:hover {
     display: flex;
 }
 
-.box-50, .box-100 {
+.box-50, .box-auto, .box-20, .box-30 {
     background: #fff;
     border-radius: 4px;
-    margin: 16px;
+    margin: 8px;
+    padding: 12px;
 }
 
 .box-50 {
-    padding: 12px;
     width: 50%;
+}
+
+.box-20 {
+    width: 20%;
+}
+
+.box-30 {
+    width: 30%;
 }
 
 form {
@@ -129,4 +142,32 @@ table {
 
 th {
     color: #aaa;
+}
+
+.button-container {
+    text-align: right;
+}
+
+#vendor-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+.vendor-list-item {
+    width: 100%;
+    text-align: left;
+    display: flex;
+    padding-right: 10px;
+    word-wrap: break-word;
+}
+
+.vendor-name {
+    width: 100%;
+    padding-right: 2px;
+}
+
+.vendor-identity {
+    text-align: right;
+    border-left: 1px solid #ddd;
+    padding-left: 4px;
 }
