--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -21,7 +21,7 @@
                 <div class="link">TRANSACTIONS</div>
             </a>
             <a href="#">
-                <div class="link">REPORT GENERATION</div>
+                <div class="link">VENDOR REPORT</div>
             </a>
         </div>
         <div id="main">
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="content">
-                <div class="box-100">
+                <div class="box-auto">
                     <table>
                         <tr>
                             <th scope="col">sender</th>
@@ -60,7 +60,7 @@
                         {% endfor %}
                     </table>
                 </div>
-                <div class="box-100">
+                <div class="box-auto">
                     <table>
                         <tr>
                             <th scope="col">sender</th>
