--- a/templates/reportgeneration.html
+++ b/templates/reportgeneration.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Transactions</title>
+    <title>Vendors</title>
     <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
     <!-- <script src="../static/js/reportgeneration.js"></script> -->
 </head>
@@ -21,17 +21,49 @@
                 <div class="link">TRANSACTIONS</div>
             </a>
             <a class="active" href="#">
-                <div class="link">REPORT GENERATION</div>
+                <div class="link">VENDOR REPORT</div>
             </a>
         </div>
         <div id="main">
             <div class="header">
-                <div class="right-align">
-                    
-                </div>
             </div>
-            <div class="content">
-                
+            <div class="content-flex">
+                <div class="box-30">
+                    <ul id="vendor-list">
+                        <li>
+                            <button class="vendor-list-item">
+                                <div class="vendor-name">Aoyama Coffee</div>
+                                <div class="vendor-identity">46acec94</div>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box-auto">
+                    <table>
+                        <tr>
+                            <th scope="col">sender</th>
+                            <th scope="col">amount</th>
+                            <th scope="col">timestamp</th>
+                        </tr>
+
+                        {% set ns = namespace(t_index = 0) %}
+
+                        {% for block in blocks %}
+
+                        {% for transaction in block.transactions %}
+                        <tr>
+                            <td style="width: 30%; text-align: center">{{t_senders[ns.t_index].name}}
+                                ({{(transaction.sender[:8])}})</td>
+                            <td style="width: 15%; text-align: center">{{transaction.amount}}</td>
+                            <td style="width: 25%; text-align: center">{{transaction.timestamp}}</td>
+                        </tr>
+                        {% set ns.t_index = ns.t_index + 1%}
+
+                        {% endfor %}
+
+                        {% endfor %}
+                    </table>
+                </div>
             </div>
         </div>
 
