add functionality of report

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -19,7 +19,7 @@
             <a href="/transactions">
                 <div class="link">TRANSACTIONS</div>
             </a>
-            <a href="#">
+            <a href="/report">
                 <div class="link">VENDOR REPORT</div>
             </a>
         </div>
