--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -20,7 +20,7 @@
             <a class="active" href="/transactions">
                 <div class="link">TRANSACTIONS</div>
             </a>
-            <a href="#">
+            <a href="/report">
                 <div class="link">VENDOR REPORT</div>
             </a>
         </div>
