--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -14,14 +14,14 @@
     <section id="container">
         <div id="sidebar">
             <div class="header"></div>
-            <a href="/">
-                <div class="link">REGISTRATION</div>
-            </a>
             <a class="active" href="/transactions">
                 <div class="link">TRANSACTIONS</div>
             </a>
+            <a href="/">
+                <div class="link">REGISTRATION</div>
+            </a>
             <a href="/report">
-                <div class="link">VENDOR REPORT</div>
+                <div class="link">REPORTS</div>
             </a>
         </div>
         <div id="main">
@@ -46,12 +46,12 @@
 
                         {% for transaction in block.transactions %}
                         <tr>
+                            <td style="width: 25%; text-align: center">{{transaction.timestamp}}</td>
                             <td style="width: 30%; text-align: center">{{t_senders[ns.t_index].name}}
                                 ({{(transaction.sender[:8])}})</td>
                             <td style="width: 30%; text-align: center">{{t_recipients[ns.t_index].name}}
                                 ({{(transaction.address[:8])}})</td>
-                            <td style="width: 15%; text-align: center">{{transaction.amount}}</td>
-                            <td style="width: 25%; text-align: center">{{transaction.timestamp}}</td>
+                            <td style="width: 15%; text-align: right">{{transaction.amount}}</td>
                         </tr>
                         {% set ns.t_index = ns.t_index + 1%}
 
@@ -74,12 +74,12 @@
                         {% for pending_transaction in pending_transactions %}
 
                         <tr>
-                            <td style="width: 30%; text-align: center">{{pt_senders[ns.pt_index].name}}
-                                ({{(pending_transaction.sender[:8])}})</td>
-                            <td style="width: 30%; text-align: center">{{pt_recipients[ns.pt_index].name}}
-                                ({{(pending_transaction.address[:8])}})</td>
-                            <td style="width: 15%; text-align: center">{{pending_transaction.amount}}</td>
                             <td style="width: 25%; text-align: center">{{pending_transaction.timestamp}}</td>
+                            <td style="width: 30%; text-align: center">{{pt_senders[ns.pt_index].name}}
+                                <span style="color:#aaa">({{(pending_transaction.sender[:8])}})</span></td>
+                            <td style="width: 30%; text-align: center">{{pt_recipients[ns.pt_index].name}}
+                                <span style="color:#aaa">({{(pending_transaction.address[:8])}})</span></td>
+                            <td style="width: 15%; text-align: right">{{pending_transaction.amount}}</td>
                         </tr>
 
                         {% set ns.pt_index = ns.pt_index + 1%}
